Fix: Layout overflow

--- a/src/styles/project-details.module.css
+++ b/src/styles/project-details.module.css
@@ -1,3 +1,6 @@
+.details{
+  margin-bottom: 100px;
+}
 .details h2 {
   font-size: 3.5em;
   margin-top: 80px;
